# RecLite

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/: backend.rs  engine.rs  error.rs  id_mapper.rs  lib.rs  storage.rs  tombstone.rs  vector_index.rs
tests/: basic_compilation.rs
