[package]
name = "reclite"
version = "0.1.0"
edition = "2021"
authors = ["RecLite Contributors"]
description = "RecLite - The SQLite for Recommendation Systems. An embedded, zero-configuration recommendation engine with SIMD-accelerated vector similarity search."
license = "MIT OR Apache-2.0"
repository = "https://github.com/reclite/reclite"
keywords = ["recommendation", "vector", "similarity", "search", "embedded"]
categories = ["database", "algorithms", "science"]

[dependencies]
redb = "2.1"
simsimd = "4.0"
bincode = "1.3"
bitvec = "1.0"

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"
tempfile = "3.8"